--- a/themes/xpr/templates/index.html
+++ b/themes/xpr/templates/index.html
@@ -6,6 +6,7 @@
 	text-align: center;
 	font-size: 70%;
 	color: gray;
+	line-height: 1em;
 }
 
 .ikonoj a {
@@ -18,13 +19,13 @@
 </style>
 
 <center class="ikonoj">
-		<div class="pure-u-1-6" >
+	<div class="pure-u-1-6" >
 		<a href="{{ SITEURL }}/katalogo/ocarina">
 			<img
 				src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/ocarina.bn.png" style="width: 100%; max-width: 256px"
 				onmouseover="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/ocarina.kol.png';"
 				onmouseout="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/ocarina.bn.png';" /><br/>
-			אוקלינה</a>
+				אוקלינה</a><br />
 		<a href="{{ SITEURL }}/senmova/pdf/ocarina.pdf"><i class="icon-down-circled elsxuti"></i></a>
 	</div>
 	<!--
@@ -33,9 +34,11 @@
 			<img
 				src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/cvaim.bn.png" style="width: 100%; max-width: 256px"
 				onmouseover="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/cvaim.kol.png';"
-				onmouseout="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/cvaim.bn.png';" /><br/>
-			אותיות בצבעים</a>
-		<a href="{{ SITEURL }}/senmova/pdf/cvaim.pdf"><i class="icon-down-circled elsxuti"></i></a>
+				onmouseout="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/cvaim.bn.png';" />
+			<br/>
+			אותיות בצבעים
+		</a><br/>
+		<a href="{{ SITEURL }}/senmova/pdf/cvaim.kol.pdf"><i class="icon-down-circled elsxuti"></i></a><a href="{{ SITEURL }}/senmova/pdf/cvaim.bn.pdf"><i class="icon-down-circled elsxuti"></i></a>
 	</div>
 	-->
     <div class="pure-u-1-6" >
@@ -44,7 +47,7 @@
 				src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/ukulele.bn.png" style="width: 100%; max-width: 256px"
 				onmouseover="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/ukulele.kol.png';"
 				onmouseout="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/ukulele.bn.png';" /><br/>
-			אוקליקלות</a>
+				אוקליקלות</a><br />
 		<a href="{{ SITEURL }}/senmova/pdf/ukulele.pdf"><i class="icon-down-circled elsxuti"></i></a>
 	</div>
    <!-- <div class="pure-u-1-6" >
@@ -62,15 +65,15 @@
 				src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/babel.bn.png" style="width: 100%; max-width: 256px"
 				onmouseover="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/babel.kol.png';"
 				onmouseout="this.src='{{ SITEURL }}/{{ THEME_STATIC_DIR }}/media/ikonoj/babel.bn.png';" /><br/>
-			בבל</a>
+				בבל</a><br />
 		<a href="{{ SITEURL }}/senmova/pdf/babel.pdf"><i class="icon-down-circled elsxuti"></i></a>
 	</div>
 </center>
 
 <section id="content">
-<p><strong>פושישית</strong> היא הוצאה לאור קטנה קטנה, של איש אחד. כל מה שיוצא בפושישית יוצא הן בפורמט דיגיטלי (+קוד מקור) והן בדפוס במחיר עלות ההדפסה, כאשר קיימת הקפדה על קו עיצובי מיוחד ודיוק טיפוגרפי.</p>
+<p><strong>פושישית</strong> היא הוצאה לאור קטנה קטנה, של איש אחד. כל מה שיוצא בפושישית יוצא הן בפורמט דיגיטלי (+קוד מקור) והן בדפוס במחיר עלות ההדפסה.</p>
 
-<p>אתן מוזמנים לקרוא עוד בעמוד האודות, לקרוא מהטקסטים שיצאו עד כה, לשאול <a href="{{ SITEURL }}/novajxoj.html">מה נשתנה</a>, וכמובן להושיט יד (או כתב־יד!).</p>
+<p>אתן מוזמנים לקרוא עוד בעמוד ה<a href="{{ SITEURL }}/pri">אודות</a>, לקרוא מ<a href="{{ SITEURL }}/katalogo">הטקסטים שיצאו עד כה</a>, לשאול <a href="{{ SITEURL }}/novajxoj.html">מה נשתנה</a>, וכמובן להושיט יד (או כתב־יד!).</p>
 
 <p>בתקווה שתמצאו הנאה, עניין וחומר למחשבה,<br/>
 יודה רונן</p>
