--- a/themes/xpr/templates/novajxoj.html
+++ b/themes/xpr/templates/novajxoj.html
@@ -16,7 +16,9 @@
                 <footer class="post-info">
                 </footer><!-- /.post-info -->
                 <div class="entry-content"> {{ article.summary }} </div><!-- /.entry-content -->
-        </article></li>
+		<hr />
+        </article>
+		</li>
 {% endfor %}
 </ul><!-- /#posts-list -->
 {% include 'pagination.html' %}
